Fix gameovermodal button overflow and add time out message

--- a/mdn_games/number-guess2/css/styles.css
+++ b/mdn_games/number-guess2/css/styles.css
@@ -386,7 +386,7 @@ footer .copyright {
    color: #00FFFF;
    text-align: center;
    font-weight: bold;
-   margin-bottom: 25px;
+   margin-bottom: 15px;
    font-size: 28px;
 }
 
@@ -404,7 +404,7 @@ footer .copyright {
 }
 
 .modals p {
-   padding: 10px 0;
+   padding: 7px 0;
    font-size: 14px;
    line-height: 1.5;
 }
